# xvkbd-cli

./: .SRCINFO  Imakefile  PKGBUILD  README.md  xvkbd.c
src/: ChangeLog  Makefile.am  Makefile.in  README  configure.ac  xvkbd.c  xvkbd.man
src/xvkbd-4.1/: ChangeLog  Imakefile  XVkbd-common.h  config.h.in  configure  resources.h  xvkbd.c
